Change URLs to relative links

--- a/src/404.md
+++ b/src/404.md
@@ -4,8 +4,8 @@
 
 続きを読むには、左上のアイコンから`ナビゲーションバー`または`検索`をご利用ください☺️
 
-または、`リンク`から[トップページ](https://coralpink.github.io/commentary/)に戻ることもできます❗
+または、`リンク`から[トップページ](index.html)に戻ることもできます❗
 
 ![goal](goal.webp)
 
-[Commentary of Dotfiles - Top Page](https://coralpink.github.io/commentary/)
+[Commentary of Dotfiles - Top Page](index.html)
